--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   shared_preferences: ^2.2.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  path_provider: ^2.1.3
+  path_provider: ^2.1.0
   http: ^1.2.2
   cupertino_icons: ^1.0.8
   uuid: ^4.5.1
@@ -57,5 +57,6 @@ flutter:
     - assets/img/logoMasalah.png
     - assets/img/logoOtak.png
     - assets/img/logoMental.png
+    - assets/img/ai.png
     - assets/icons/logonotext.png
     - assets/.env
